Archive2/dd/98677472040d93/output
main.cpp: In function 'int main()':
main.cpp:46:111: error: template argument 2 is invalid
     accumulator_set<double, stats<tag::min, tag::max, tag::mean, tag::variance, tag::skewness, tag::kurtosis> acc;            
                                                                                                               ^
main.cpp:49:24: error: 'acc' was not declared in this scope
         acc((double)f()); // essential to cast to double here
                        ^
main.cpp:51:36: error: 'acc' was not declared in this scope
     min = boost::accumulators::min(acc);
                                    ^
